# state

./: CMakeLists.txt  Dockerfile  LICENSE  fix-format.sh  main.cpp
.github/workflows/: build.yml
docs/: actions.md  sessions.md
scripts/: build-and-test.sh  check-format.sh  prepare-database.sh
src/include/aewt/: client.hpp  client_listener.hpp  clients.hpp  config.hpp  distribute.hpp  kernel.hpp  kernel_context.hpp  listener.hpp  logger.hpp  repl.hpp  request.hpp  response.hpp  server.hpp  session.hpp  session_context.hpp  session_listener.hpp  state.hpp  subscription.hpp  subscriptions.hpp  utils.hpp  validator.hpp  version.hpp
src/include/aewt/handlers/: broadcast.hpp  broadcast_handler.hpp  client.hpp  client_exists.hpp  client_exists_handler.hpp  client_handler.hpp  client_join.hpp  client_join_handler.hpp  client_leave.hpp  client_leave_handler.hpp  clients.hpp  clients_handler.hpp  is_subscribed.hpp  is_subscribed_handler.hpp  join_handler.hpp  leave_handler.hpp  ping.hpp  ping_handler.hpp  publish.hpp  publish_handler.hpp  register_handler.hpp  send.hpp  send_handler.hpp  session_client_exists.hpp  session_client_exists_handler.hpp  session_clients.hpp  session_clients_handler.hpp  session_handler.hpp  session_join_handler.hpp  session_leave_handler.hpp  subscribe.hpp  subscribe_handler.hpp  unimplemented.hpp  unimplemented_handler.hpp  unsubscribe.hpp  unsubscribe_all_client.hpp  unsubscribe_all_client_handler.hpp  unsubscribe_all_handler.hpp  unsubscribe_all_session.hpp  unsubscribe_all_session_handler.hpp  (+3 more)
src/include/aewt/state/: instance.hpp  session.hpp
src/include/aewt/validators/: broadcast.hpp  broadcast_validator.hpp  client_id.hpp  client_id_validator.hpp  clients.hpp  clients_validator.hpp  id_validator.hpp  is_subscribed.hpp  is_subscribed_validator.hpp  publish.hpp  publish_validator.hpp  register_validator.hpp  send.hpp  send_validator.hpp  session_id.hpp  session_id_validator.hpp  session_validator.hpp  subscriptions.hpp  subscriptions_validator.hpp  unsubscribe_all_client.hpp  unsubscribe_all_client_validator.hpp  unsubscribe_all_session.hpp  unsubscribe_all_session_validator.hpp
src/objects/: client.cpp  client_listener.cpp  distribute.cpp  kernel.cpp  listener.cpp  repl.cpp  response.cpp  server.cpp  session.cpp  session_listener.cpp  state.cpp  utils.cpp  validator.cpp  version.cpp
src/objects/handlers/: broadcast.cpp  broadcast_handler.cpp  client.cpp  client_exists.cpp  client_exists_handler.cpp  client_handler.cpp  client_join.cpp  client_join_handler.cpp  client_leave.cpp  client_leave_handler.cpp  clients.cpp  clients_handler.cpp  is_subscribed.cpp  is_subscribed_handler.cpp  join_handler.cpp  leave_handler.cpp  ping.cpp  ping_handler.cpp  publish.cpp  publish_handler.cpp  register_handler.cpp  send.cpp  send_handler.cpp  session_client_exists.cpp  session_client_exists_handler.cpp  session_clients.cpp  session_clients_handler.cpp  session_handler.cpp  session_join_handler.cpp  session_leave_handler.cpp  subscribe.cpp  subscribe_handler.cpp  unimplemented.cpp  unimplemented_handler.cpp  unsubscribe.cpp  unsubscribe_all_client.cpp  unsubscribe_all_client_handler.cpp  unsubscribe_all_handler.cpp  unsubscribe_all_session.cpp  unsubscribe_all_session_handler.cpp  (+3 more)
src/objects/state/: instance.cpp  session.cpp
src/objects/validators/: broadcast.cpp  broadcast_validator.cpp  client_id.cpp  client_id_validator.cpp  clients.cpp  clients_validator.cpp  id_validator.cpp  is_subscribed.cpp  is_subscribed_validator.cpp  publish.cpp  publish_validator.cpp  register_validator.cpp  send.cpp  send_validator.cpp  session_id.cpp  session_id_validator.cpp  session_validator.cpp  subscriptions.cpp  subscriptions_validator.cpp  unsubscribe_all_client.cpp  unsubscribe_all_client_validator.cpp  unsubscribe_all_session.cpp  unsubscribe_all_session_validator.cpp
tests/: helpers.hpp  kernel_test.cc  server_base.hpp  server_test.cc  session_test.cc  state_test.cc  validator_test.cc  version_test.cc
tests/handlers/: broadcast_handler_test.cc  broadcast_test.cc  client_exists_handler_test.cc  client_exists_test.cc  client_handler_test.cc  client_join_handler_test.cc  client_join_test.cc  client_leave_handler_test.cc  client_leave_test.cc  client_test.cc  clients_handler_test.cc  clients_test.cc  is_subscribed_handler_test.cc  is_subscribed_test.cc  join_handler_test.cc  leave_handler_test.cc  pong_handler_test.cc  pong_test.cc  publish_handler_test.cc  publish_test.cc  register_handler_test.cc  send_handler_test.cc  send_test.cc  session_client_exists_handler_test.cc  session_client_exists_test.cc  session_clients_handler_test.cc  session_clients_test.cc  session_handler_test.cc  session_test.cc  subscribe_handler_test.cc  subscribe_test.cc  unsubscribe_all_client_handler_test.cc  unsubscribe_all_client_test.cc  unsubscribe_all_handler_test.cc  unsubscribe_all_session_handler_test.cc  unsubscribe_all_session_test.cc  unsubscribe_handler_test.cc  unsubscribe_test.cc  whoami_handler_test.cc  whoami_test.cc
tests/kernel/: kernel_broadcast_test.cc  kernel_pong_test.cc  kernel_subscribe_test.cc  kernel_unsubscribe_all_client_test.cc  kernel_unsubscribe_test.cc  kernel_validations_test.cc  kernel_whoami_test.cc
tests/state/: instance_test.cc  session_test.cc
tests/validators/: broadcast_validator_test.cc  client_id_test.cc  client_id_validator_test.cc  clients_test.cc  clients_validator_test.cc  is_subscribed_validator_test.cc  publish_validator_test.cc  register_validator_test.cc  send_validator_test.cc  session_id_test.cc  session_id_validator_test.cc  session_validator_test.cc  subscriptions_test.cc  subscriptions_validator_test.cc
